--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -1852,8 +1852,18 @@
                         <!--<p class="small">Etiam nec porta risus. Aliquam id odio orci. Duis accumsan feugiat feugiat.</p>-->
 
                         <dl class="faqs">
-                        	<dt>Coming soon ...</dt>
-                        	<dd class="small">... as soon as you start asking questions ;-)</dd>
+                        	<dt>Do I need a partner to attend DAP?</dt>
+                        	<dd class="small">No, some people will come in partnerships, and others will come solo. If you want, we can help you to get in contact with other participants to pair yourself in advance.</dd>
+                        	<dt>Do I need to have all the prerequisites from all the disciplines or only the ones from the main topic of the week?</dt>
+                        	<dd class="small">To get the best from this intermediate/advanced program and keep a fluent learning of the whole group, as a participant we expect from you to be comfortable performing ALL the tricks and acro positions from ALL the disciplines independently of which period you are joining. 
+</dd>
+                          <dt>Is accommodation included in the price of the program?</dt>
+                          <dd class="small">Yes! You will have your own single bed in a double room. Each house has 4 double rooms so you will be sharing the house with 7 other friends. During registration you can already tell us who you would like to team up with. We will do our best to put you all together.</dd>
+                          <dt>Is food included in the price of the program?</dt>
+                        	<dd class="small">No. You will be responsible for your own food. But each house has a fully equipped kitchen in which you can cook what you please.</dd>
+                          <dt>How to register?</dt>
+                        	<dd class="small">Registrations are running on the Acrolama platform. Click “Register now”, then you only need to sign in the Acrolama website and last to apply for DAP Event. It will take you a minute.</dd>
+
                         </dl>
                     </div>
 
