Register link teachers out

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -16,7 +16,7 @@
                     <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">What does a dyslexic cow say? <strong>OOoooM</strong>.❤</h6>
                 <div class="btns-container">
                     <!-- <a href="#" class="btn btn-md" data-modal-link="email-ticket">REGISTER</a> -->
-                    <a href="https://acrolama.com/events/urban-acro-festival-2020-new-edition/" class="btn btn-md" >Register</a>
+                    <a href="https://acrolama.com/events/urban-acro-festival-2021" class="btn btn-md" >Register</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">Location</a></li>
                         </ul>
                         <!-- <a data-modal-link="email-ticket" class="pull-right buy-btn">Register</a> -->
-                        <a href="https://acrolama.com/events/urban-acro-festival-2020-new-edition/" class="pull-right buy-btn" >Register</a>
+                        <a href="https://acrolama.com/events/urban-acro-festival-2021/" class="pull-right buy-btn" >Register</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
         <div class="container">
             <span class="icon section-icon icon-multimedia-12"></span>
             <h3>Urban acro festival in Zürich</h3>
-            <p class="text-alt">Summer + Acro [Partner Acrobatics, Acroyoga, Acrodance] + Yoga + Handstand + Thai Massage = <span class="highlight">3 days of tons of fun!</span></p>
+            <p class="text-alt">Summer + Partner Acrobatics + Acroyoga + Acrodance + Yoga + Handstand + Thai Massage = <span class="highlight">3 days of tons of fun!</span></p>
             <br />
             <br />
             <div class="tabs-wrapper tabs-horizontal">
@@ -82,15 +82,13 @@
                         </div>
                         <div class="col-sm-7 align-left">
                             <h6>4th. Urban Acro Festival</h6>
-                            <p>This year it is going to be a special edition of the Urban Acro
-                                Festival. We would like to address acrobats and acroyoga lovers, who want to
-                                be part of this small acro gathering after a long time of social
-                                distancing. We have selected great teacher-friends around Switzerland
-                                and happy to share with you a cool mix of different challenging and fun
-                                acro workshops over this long festival weekend.</p>
-                            <p>Acro and Training is our addiction but there is space for social,
-                                creative moments and stay tuned, we have a funny surprise!</p>
-                            <p>We have this year only spots for 35 friends/participants.</p>
+                            <p>Time for another UAF! hope we continue to be so lucky and not have to skip a single one!
+                                We have selected great teachers/friends around Switzerland and Europe
+                                and are happy to share with you a cool mix of different challenging and fun
+                                acro workshops over this weekend festival.</p>
+                            <p>Going full on traning and playing is our bread and butter but must be space for social,
+                                creative moments with a surprise here and there!</p>
+                            <p>We have this year only spots for 50 participants.</p>
                         </div>
                     </div>
 
@@ -100,12 +98,11 @@
 
                             <p>Spreading acro is our goal. We are happy to offer you a nice workshop
                                 list with many different styles of movement:</p>
-                            <p>Flowy, Balanced, Standing, Laying, Dynamic, Static, Intro and Advanced.
+                            <p>Flowy, Balanced, Standing, Laying, Dynamic, Static, Intro to Advanced.
                                 It's three days of moving, sharing and having fun.</p>
-                            <p>We have carefully chosen our teacher-team around the Switzerland Acro
+                            <p>We have carefully chosen our teacher-team around the Switzerland and Europe Acro
                                 Community. We trust in them and love to offer you small, personalised
-                                workshops. Of conviction, we keep it small and familiarly. There will be
-                                also longe sessions with a coach. (advanced)</p>
+                                workshops. Of conviction, we keep it small and familiarly.</p>
                             <p>So all in all, we are looking forward to 6 Rounds with each 2 Workshops
                                 to choose from.</p>
                             <p>We'll list the Workshops as soon as possible, to receive the last news
@@ -133,7 +130,6 @@
                             <li>workshop from some awesome local teachers</li>
                             <li>all day jam to make sure you get enough acro</li>
                             <li>special saturday evening event ;-) </li>
-
                             </ul>
                         </div>
                     </div>
@@ -247,31 +243,41 @@ a solid foundation upon which creativity roams free.</p>
     <section id="speakers" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-faces-users-04"></span>
-            <h3>Teachers</h3>
+            <h3>Teachers ... Coming soon ;-)</h3>
             <p class="text-alt">Meet our <span class="highlight"> teachers.</span></p>
             <br />
             <br />
-            <!-- Teachers Come here :D -->
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias und Paule Urban Acro Festival Zürich" class="img-responsive"></div>
-                    <h3 class="name">Matthias & Paulina</h3>
-                    <p class="text-alt"><small>Zürich roots ;D</small></p>
-                    <p class="about">Feet on the head! Awesome acrobats, who love to move and know many may tricks in standing. We are happy to have them at the Urban Acro Festival again!</p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
-                    <h3 class="name">Josh & Cloe</h3>
-                    <p class="text-alt"><small>Basel</small></p>
-                    <p class="about">Tossing around and catching again. Doesn't matter if they have to balance or dance, they enjoy every second of it. Take part in their workshops, which will give you a better understanding of dynamic skills at the Urban Acro Festival!</p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
+            <!-- <div class="col-sm-4"> -->
+                <!-- <div class="speaker"> -->
+                <!--     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias und Paule Urban Acro Festival Zürich" class="img-responsive"></div> -->
+                <!--     <h3 class="name">Matthias & Paulina</h3> -->
+                <!--     <p class="text-alt"><small>Zürich roots ;D</small></p> -->
+                <!--     <p class="about">Feet on the head! Awesome acrobats, who love to move and know many may tricks in standing. We are happy to have them at the Urban Acro Festival again!</p> -->
+                <!--     <ul class="speaker-socials"> -->
+                <!--     </ul> -->
+                <!-- </div> -->
+            <!-- </div> -->
+            <!-- Teachers Come here -->
+            <!-- <div class="col-sm-4"> -->
+                <!-- <div class="speaker"> -->
+                <!--     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias und Paule Urban Acro Festival Zürich" class="img-responsive"></div> -->
+                <!--     <h3 class="name">Matthias & Paulina</h3> -->
+                <!--     <p class="text-alt"><small>Zürich roots ;D</small></p> -->
+                <!--     <p class="about">Feet on the head! Awesome acrobats, who love to move and know many may tricks in standing. We are happy to have them at the Urban Acro Festival again!</p> -->
+                <!--     <ul class="speaker-socials"> -->
+                <!--     </ul> -->
+                <!-- </div> -->
+            <!-- </div> -->
+            <!-- <div class="col-sm-4"> -->
+                <!-- <div class="speaker"> -->
+                <!--     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div> -->
+                <!--     <h3 class="name">Josh & Cloe</h3> -->
+                <!--     <p class="text-alt"><small>Basel</small></p> -->
+                <!--     <p class="about">Tossing around and catching again. Doesn't matter if they have to balance or dance, they enjoy every second of it. Take part in their workshops, which will give you a better understanding of dynamic skills at the Urban Acro Festival!</p> -->
+                <!--     <ul class="speaker-socials"> -->
+                <!--     </ul> -->
+                <!-- </div> -->
+            <!-- </div> -->
         </div>
     </section>
 
@@ -289,9 +295,9 @@ a solid foundation upon which creativity roams free.</p>
 
                     <!-- Navigation by day start -->
                     <ul class="nav nav-schedule">
-                        <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">21/08/2020</p></a></li>
-                        <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">22/08/2020</p></a></li>
-                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">23/08/2020</p></a></li>
+                        <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">27/08/2020</p></a></li>
+                        <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">28/08/2020</p></a></li>
+                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">29/08/2020</p></a></li>
                     </ul>
                     <!-- Navigation by day end -->
 
@@ -826,7 +832,7 @@ a solid foundation upon which creativity roams free.</p>
                                 <li><span class="fa fa-check check-icon"></span>Saturday Night Event</li>
                             </ul>
                         </div>
-                        <a href="https://acrolama.com/events/urban-acro-festival-2020-new-edition/" class="btn btn-lg btn-white" >Register</a>
+                        <a href="https://acrolama.com/events/urban-acro-festival-2021" class="btn btn-lg btn-white" >Register</a>
                     </div>
                 </div>
             </div>
