--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -86,7 +86,7 @@
                                 We have selected great teachers/friends around Switzerland and Europe
                                 and are happy to share with you a cool mix of different challenging and fun
                                 acro workshops over this weekend festival.</p>
-                            <p>Going full on traning and playing is our bread and butter but must be space for social,
+                            <p>Going full on training and playing is our bread and butter but there must be space for social,
                                 creative moments with a surprise here and there!</p>
                             <p>We have this year only spots for 50 participants.</p>
                         </div>
@@ -98,10 +98,10 @@
 
                             <p>Spreading acro is our goal. We are happy to offer you a nice workshop
                                 list with many different styles of movement:</p>
-                            <p>Flowy, Balanced, Standing, Laying, Dynamic, Static, Intro to Advanced.
+                            <p>Flow, Dynamic and Standing Acro ... From Intro to Advanced.
                                 It's three days of moving, sharing and having fun.</p>
                             <p>We have carefully chosen our teacher-team around the Switzerland and Europe Acro
-                                Community. We trust in them and love to offer you small, personalised
+                                Community. We trust in them and love to offer you small, personalized
                                 workshops. Of conviction, we keep it small and familiarly.</p>
                             <p>So all in all, we are looking forward to 6 Rounds with each 2 Workshops
                                 to choose from.</p>
@@ -129,7 +129,7 @@
                             <li>main dishes and snacks, all vegan and organic</li>
                             <li>workshop from some awesome local teachers</li>
                             <li>all day jam to make sure you get enough acro</li>
-                            <li>special saturday evening event ;-) </li>
+                            <li>special Saturday evening event ;-) </li>
                             </ul>
                         </div>
                     </div>
@@ -145,11 +145,8 @@
                 <article>
                     <h3>Food Corner</h3>
                     <p><small class="text-alt">Not to picky <span class="highlight"> only local, organic and vegan with Love.</span></small></p>
-                    <p>We set a high value on healthy food. So everything you eat during this days comes from the local farmer and will be cooked with love. As we train all day long we need energy and we want to have hight quality.</p>
-                    <p>With this in mind, we look to each other, to our food and to all other
-living beings we share the planet with. Vegan, organic, regional, fair
-and food-waste-conscious ingredients and processes are a given, forming
-a solid foundation upon which creativity roams free.</p>
+                    <p>We set a high value on healthy food. So everything you eat during this days comes from the local farmer and will be cooked with love. As we train all day long we need energy and we want to have high quality food for everyone.</p>
+                    <p>Vegan, organic, regional, fair and food-waste-conscious ingredients and processes are a given, forming a solid foundation upon which creativity roams free.</p>
                 </article>
             </div>
         </div>
@@ -159,7 +156,7 @@ a solid foundation upon which creativity roams free.</p>
                 <article>
                     <h3>Sleeping Area</h3>
                     <p><small class="text-alt">Better <span class="highlight">together</span></small></p>
-                    <p>The gallery above the trainings hall and the barn in the Zirkusquartier
+                    <p>The gallery above the training hall and the barn in the Zirkusquartier
                     area will be our two sleeping halls.</p>
                     <p>Each spot fit approximately 25 people. Simple and easy<span class="highlight"> first comes first serves</span>.</p>
                     <p><strong>Bring your own sleeping bag and matt to sleep.</strong></p>
@@ -286,7 +283,7 @@ a solid foundation upon which creativity roams free.</p>
     <section id="schedule" class="section align-center">
         <div class="container">
             <h5 class="heading-alt">Festival schedule</h5>
-            <p class="text-alt" style="margin-bottom: 80px;"><span class="highlight">NOT final, NOT all the workshops are in Chnopf, all the infos soon!</span></p>
+            <p class="text-alt" style="margin-bottom: 80px;"><span class="highlight">NOT final, NOT all the workshops are in Chnopf, all the info soon!</span></p>
 
             <div class="col-md-10 col-md-offset-1">
 
@@ -403,7 +400,7 @@ a solid foundation upon which creativity roams free.</p>
                                                     <strong class="highlight speaker-name">JAM</strong><br>
                                                     <p class="description">Jam in the main areas after the dinner</p>
                                                     <strong class="highlight speaker-name">Coach</strong>
-                                                    <p class="description">3 Spots for duos for coaching sesion with or withour longes. 30 Min.<br>
+                                                    <p class="description">3 Spots for duos for coaching session with or without longe. 30 Min.<br>
                                                     </p>
                                                 </article>
                                             </div>
@@ -519,7 +516,7 @@ a solid foundation upon which creativity roams free.</p>
                                             </a>
                                             <div id="schedule3_day2_main_time5" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                    <p class="description">Lunch time! Remeber to wirte in the comments of your registration if you have some intolerance or preference.</p>
+                                                    <p class="description">Lunch time! Remember to write in the comments of your registration if you have some intolerance or preference.</p>
                                                 </article>
                                             </div>
                                         </div>
@@ -537,7 +534,7 @@ a solid foundation upon which creativity roams free.</p>
                                             <div id="schedule3_day2_main_time7" class="panel-collapse collapse schedule-item-body">
                                                 <article>
                                                     <strong class="highlight speaker-name">Danica</strong><br>
-                                                    <p class="description">Lead thai massage to relax</p>
+                                                    <p class="description">Lead Thai massage to relax</p>
                                                     <strong class="highlight speaker-name">Coach</strong>
                                                     <p class="description">2 Spots for Coaching Session with or without longe</p>
                                                 </article>
@@ -612,7 +609,7 @@ a solid foundation upon which creativity roams free.</p>
                                             </div>
                                             <a data-toggle="collapse" data-parent="#schedule3_day2_main_timeline" href="#schedule3_day2_main_time10" class="schedule-item-toggle collapsed">
                                                 <strong class="time highlight"><span class="icon icon-office-24"></span>20:00</strong>
-                                                <h6 class="title">Mini Show + JAM and Musica<i class="icon icon-arrows-06"></i></h6>
+                                                <h6 class="title">Mini Show + JAM and Music<i class="icon icon-arrows-06"></i></h6>
                                             </a>
                                             <div id="schedule3_day2_main_time10" class="panel-collapse collapse schedule-item-body">
                                                 <article>
@@ -728,7 +725,7 @@ a solid foundation upon which creativity roams free.</p>
                                             </a>
                                             <div id="schedule3_day3_main_time5" class="panel-collapse collapse schedule-item-body">
                                                 <article>
-                                                    <p class="description">Lunch time! Recover some energys to keep going :)! Maybe a group picture ? </p>
+                                                    <p class="description">Lunch time! Recover some energy to keep going :)! Maybe a group picture ? </p>
                                                 </article>
                                             </div>
                                         </div>
@@ -817,13 +814,13 @@ a solid foundation upon which creativity roams free.</p>
     <section class="section align-center">
         <div class="container">
             <h5 class="heading-alt">Pricing</h5>
-            <p class="text-alt" style="margin-bottom: 80px;">Some questions might get answeard in our<a href="https://acrolama.com/info/UrbanAcroFestivalPolicy/" > Return Policies</a> otherwise just write us!</p>
+            <p class="text-alt" style="margin-bottom: 80px;">Some questions might get answered in our<a href="https://acrolama.com/info/UrbanAcroFestivalPolicy/" > Return Policies</a> otherwise just write us!</p>
 
                 <div class="col-sm-4 col-sm-offset-4">
                     <div class="package-column package-bright special-column">
                         <h6 class="package-title">Full Festival</h6>
                         <div class="package-price">
-                            <span class="currency">Chf</span>230.-
+                            <span class="currency">CHF</span>230.-
                         </div>
                         <div class="package-detail">
                             <ul>
@@ -853,7 +850,7 @@ a solid foundation upon which creativity roams free.</p>
     <section id="sponsors" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-documents-bookmarks-12"></span>
-            <h3>Colaborators</h3>
+            <h3>Collaborators</h3>
             <p class="text-alt">Thanks to all <span class="highlight">support</span> us</p>
             <br/>
             <br/>
@@ -898,7 +895,7 @@ a solid foundation upon which creativity roams free.</p>
                         <li class="socials-nav-item"><a href="https://facebook.com/acrolama"><span class="fa fa-facebook"></span></a></li>
                         <li class="socials-nav-item"><a href="https://instagram.com/acrolama"><span class="fa fa-instagram"></span></a></li>
                     </ul>
-                    <p class="text-alt"><small>All Rights Reserved © 2020</small></p>
+                    <p class="text-alt"><small>All Rights Reserved © 2021</small></p>
                 </div>
             </div>
         </div>
