--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -41,7 +41,7 @@
                     <div id="navigation" class="navbar-collapse collapse">
                         <ul class="navigation-list pull-left light-text">
                             <li class="navigation-item"><a href="#about" class="navigation-link">General Info</a></li>
-                            <li class="navigation-item"><a href="#speakers" class="navigation-link">Teachers</a></li>
+                            <li class="navigation-item"><a href="#teachers" class="navigation-link">Teachers</a></li>
                             <li class="navigation-item"><a href="#schedule" class="navigation-link">Schedule</a></li>
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">Location</a></li>
                         </ul>
@@ -88,7 +88,7 @@
                                 acro workshops over this weekend festival.</p>
                             <p>Going full on training and playing is our bread and butter but there must be space for social,
                                 creative moments with a surprise here and there!</p>
-                            <p>We have this year only spots for 50 participants.</p>
+                            <p>We have this year only spots for 60 participants.</p>
                         </div>
                     </div>
 
@@ -213,7 +213,7 @@
                     <div class="counter-block counter-block-no-border">
                         <div class="counter-box">
                             <div class="counter-content">
-                                <span class="count" data-from="0" data-to="35">0</span>
+                                <span class="count" data-from="0" data-to="60">0</span>
                                 <p class="title">participants</p>
                             </div>
                         </div>
@@ -237,44 +237,46 @@
 
     <!-- Seackers Section -->
 
-    <section id="speakers" class="section align-center">
+    <section id="teachers" class="section align-center">
         <div class="container">
             <span class="icon section-icon icon-faces-users-04"></span>
-            <h3>Teachers ... Coming soon ;-)</h3>
-            <p class="text-alt">Meet our <span class="highlight"> teachers.</span></p>
+            <h3>Teachers 2021</h3>
+            <p class="text-alt">Meet our <span class="highlight"> International teachers.</span> Swiss teachers up soon ;-)</p>
             <br />
             <br />
-            <!-- <div class="col-sm-4"> -->
-                <!-- <div class="speaker"> -->
-                <!--     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias und Paule Urban Acro Festival Zürich" class="img-responsive"></div> -->
-                <!--     <h3 class="name">Matthias & Paulina</h3> -->
-                <!--     <p class="text-alt"><small>Zürich roots ;D</small></p> -->
-                <!--     <p class="about">Feet on the head! Awesome acrobats, who love to move and know many may tricks in standing. We are happy to have them at the Urban Acro Festival again!</p> -->
-                <!--     <ul class="speaker-socials"> -->
-                <!--     </ul> -->
-                <!-- </div> -->
-            <!-- </div> -->
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_marysiaijulian.jpg' %}" alt="Marysia and Julian at the Urban Acro Festival Icarian Games Schweiz" class="img-responsive"></div>
+                    <h3 class="name">Marysia & Julian</h3>
+                    <p class="text-alt"><small>Icarian Zirkus Style</small></p>
+                    <p class="about">It's the first teachers we invite that we haven't had the pleasure to meet. They 'inspired' ;-) more then one of our training sessions and have a acro style we really like! After some research, everyone said we should invite them! So here we are! Eager to learn from this two!
+                    <a href="https://www.instagram.com/marysiaijulian/">@marysiaijulina</a>
+                    </p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
             <!-- Teachers Come here -->
-            <!-- <div class="col-sm-4"> -->
-                <!-- <div class="speaker"> -->
-                <!--     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias und Paule Urban Acro Festival Zürich" class="img-responsive"></div> -->
-                <!--     <h3 class="name">Matthias & Paulina</h3> -->
-                <!--     <p class="text-alt"><small>Zürich roots ;D</small></p> -->
-                <!--     <p class="about">Feet on the head! Awesome acrobats, who love to move and know many may tricks in standing. We are happy to have them at the Urban Acro Festival again!</p> -->
-                <!--     <ul class="speaker-socials"> -->
-                <!--     </ul> -->
-                <!-- </div> -->
-            <!-- </div> -->
-            <!-- <div class="col-sm-4"> -->
-                <!-- <div class="speaker"> -->
-                <!--     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div> -->
-                <!--     <h3 class="name">Josh & Cloe</h3> -->
-                <!--     <p class="text-alt"><small>Basel</small></p> -->
-                <!--     <p class="about">Tossing around and catching again. Doesn't matter if they have to balance or dance, they enjoy every second of it. Take part in their workshops, which will give you a better understanding of dynamic skills at the Urban Acro Festival!</p> -->
-                <!--     <ul class="speaker-socials"> -->
-                <!--     </ul> -->
-                <!-- </div> -->
-            <!-- </div> -->
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_melindawildmann.jpg' %}" alt="Milinda Wildman & Tibor Ihasz Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div>
+                    <h3 class="name">Melinda & Tibor</h3>
+                    <p class="text-alt"><small>Dance dance revolution!</small></p>
+                    <p class="about">Last year some of you where all over us with: "We want more Acro Dance". Well, here they are, 3er place at the Acrobatic Rock&Roll World Cup should be enough for one Festival. We could say a lot about them but we'll let this video talked for us: <a href="https://www.youtube.com/watch?v=_B1y9_3O-zQ">YouTube</a></p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_julikaandjannik.jpg' %}" alt="Julika and Jannik, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div>
+                    <h3 class="name">Julita & Jannik</h3>
+                    <p class="text-alt"><small>Direct import aus Hamburg</small></p>
+                    <p class="about">The story with this two does back many many years, similar paths in a way, from full on acroyogis to more traditional acrobats and Circus lovers. Jannik teachers in <a href="https://www.instagram.com/feel_the_flow_hamburg/">@feel_the_flow_hamburg</a> and went a bit more into the Show Biz ;-) Multi talented Acrobats with much to share. Glad to have you on board!</p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
