--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -262,7 +262,7 @@
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_melindawildmann.jpg' %}" alt="Milinda Wildman & Tibor Ihasz Acro Dance at the Urban Acro Festival in Zürich" class="img-responsive"></div>
                     <h3 class="name">Melinda & Tibor</h3>
                     <p class="text-alt"><small>Dance dance revolution!</small></p>
-                    <p class="about">Last year some of you where all over us with: "We want more Acro Dance". Well, here they are, 3er place at the Acrobatic Rock&Roll World Cup should be enough for one Festival. We could say a lot about them but we'll let this video talked for us: <a href="https://www.youtube.com/watch?v=_B1y9_3O-zQ">YouTube</a></p>
+                    <p class="about">Last year some of you where all over us: "We want more Acro Dance" you said. Well, here they are, 3er place at the Acrobatic Rock&Roll World Cup should be enough for one Festival ;-) . We could say a lot about them but we'll let this video talked for us: <a href="https://www.youtube.com/watch?v=_B1y9_3O-zQ">YouTube</a></p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
@@ -272,7 +272,7 @@
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_julikaandjannik.jpg' %}" alt="Julika and Jannik, feel the flow hamburg in the Urban Acro festival Zürich" class="img-responsive"></div>
                     <h3 class="name">Julita & Jannik</h3>
                     <p class="text-alt"><small>Direct import aus Hamburg</small></p>
-                    <p class="about">The story with this two does back many many years, similar paths in a way, from full on acroyogis to more traditional acrobats and Circus lovers. Jannik teachers in <a href="https://www.instagram.com/feel_the_flow_hamburg/">@feel_the_flow_hamburg</a> and went a bit more into the Show Biz ;-) Multi talented Acrobats with much to share. Glad to have you on board!</p>
+                    <p class="about">The story with this two does back many many years, similar paths in a way, from full on acroyogis to more traditional acrobats and Circus lovers. Jannik co-founded <a href="https://www.instagram.com/feel_the_flow_hamburg/">@feel_the_flow_hamburg</a> and Julia went a bit more into the Show Biz ;-) Multi talented Acrobats with much to share. Glad to have you on board!</p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
