Update Logo href

--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Acroyoga, Acrofestival, Acrobatic, Akrobatik, Acro Zürich, Acroyoga Zürich, Acrolama Festival">
     <meta property="og:url" content="https://www.acrofestival.ch" />
     <meta property="og:title" content="Urban Acro Festival Züri" />
-    <meta property="og:image" content="{% static 'urbanacro/images/logo_acrofestival.png'%}">
+    <meta property="og:image" content="{% static 'urbanacro/images/logo_acrofestival.jpg'%}">
     <link rel="icon" href="{% static 'urbanacro/images/favicons/favicon.ico' %}">
     <!-- <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg"> -->
 
