--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{% block title %}AcroFestival{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The First Acro, Acroyoga Festival in Zürich Switzerland. Come and join us in 3 days of playing with movement, acrobatics, yoga and healing arts.">
+    <meta name="description" content="The first Acro, Acroyoga Festival in Zurich Switzerland. Come and join us in 3 days of play with movement, acrobatics, yoga and healing arts.">
     <meta name="author" content="Adrian Garate">
     <meta name="keywords" content="Acroyoga, Acrofestival, Acrobatic, Akrobatik, Acro Zürich, Acroyoga Zürich, Acrolama Festival">
     <meta property="og:url" content="https://www.acrofestival.ch" />
