--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -1408,78 +1408,79 @@
 
                 	<div class="col-lg-12">
                     	<h2 class="uppercase text-center">register</h2>
-                        <p class="lead text-center">Super Early Bird: Until 18th of May</br>
+                        <p class="lead text-center">
+                        <!-- Super Early Bird: Until 18th of May</br> -->
                                                                 Early Bird: Until 28th June</br>
                                                                 Regular Price: After 21th June</br>
                         </p>
                     </div>
 
-                    <div class="col-lg-12">
-                        <!-- PRICE TABLES -->
-                        <div id="price-carousel">
+                    <!-- <div class="col-lg-12"> -->
+                    <!--     <!-1- PRICE TABLES -1-> -->
+                    <!--     <div id="price-carousel"> -->
 
-                            <div class="price-table early-bird">
-                                <div class="icon">
-                                    <i class="pe-5x pe-7s-wristwatch"></i>
-                                </div>
+                    <!--         <div class="price-table early-bird"> -->
+                    <!--             <div class="icon"> -->
+                    <!--                 <i class="pe-5x pe-7s-wristwatch"></i> -->
+                    <!--             </div> -->
 
-                                <div class="table-header">
-                                    <h3>Super Early Bird</h3>
-                                    <p class="price"> 500€</p>
-                                </div>
+                    <!--             <div class="table-header"> -->
+                    <!--                 <h3>Super Early Bird</h3> -->
+                    <!--                 <p class="price"> 500€</p> -->
+                    <!--             </div> -->
 
-                                <ul class="desc list-unstyled">
-                                    <li>1 Week of Full Program</li>
-                                    <li>10 Acro Workshops</li>
-                                    <li>13 Extra Classes</li>
-                                    <li>Accomodation</li>
-                                    <li>Tranining Space</li>
-                                    <li>Access to some the Resort facilities</li>
-                                </ul>
-                            </div>
+                    <!--             <ul class="desc list-unstyled"> -->
+                    <!--                 <li>1 Week of Full Program</li> -->
+                    <!--                 <li>10 Acro Workshops</li> -->
+                    <!--                 <li>13 Extra Classes</li> -->
+                    <!--                 <li>Accomodation</li> -->
+                    <!--                 <li>Tranining Space</li> -->
+                    <!--                 <li>Access to some the Resort facilities</li> -->
+                    <!--             </ul> -->
+                    <!--         </div> -->
 
-                            <div class="price-table standart">
-                                <div class="icon">
-                                    <i class="pe-5x pe-va pe-7s-ribbon"></i>
-                                </div>
+                    <!--         <div class="price-table standart"> -->
+                    <!--             <div class="icon"> -->
+                    <!--                 <i class="pe-5x pe-va pe-7s-ribbon"></i> -->
+                    <!--             </div> -->
 
-                                <div class="table-header">
-                                    <h3>Super Early Bird</h3>
-                                    <p class="price"> 890€</p>
-                                </div>
+                    <!--             <div class="table-header"> -->
+                    <!--                 <h3>Super Early Bird</h3> -->
+                    <!--                 <p class="price"> 890€</p> -->
+                    <!--             </div> -->
 
-                                <ul class="desc list-unstyled">
-                                    <li>2 Week of Full Program</li>
-                                    <li>20+ Acro Workshops</li>
-                                    <li>26+ Extra Classes</li>
-                                    <li>Accomodation</li>
-                                    <li>Tranining Space</li>
-                                    <li>Access to some the Resort facilities</li>
-                                </ul>
-                            </div>
+                    <!--             <ul class="desc list-unstyled"> -->
+                    <!--                 <li>2 Week of Full Program</li> -->
+                    <!--                 <li>20+ Acro Workshops</li> -->
+                    <!--                 <li>26+ Extra Classes</li> -->
+                    <!--                 <li>Accomodation</li> -->
+                    <!--                 <li>Tranining Space</li> -->
+                    <!--                 <li>Access to some the Resort facilities</li> -->
+                    <!--             </ul> -->
+                    <!--         </div> -->
 
-                            <div class="price-table vip">
-                                <div class="icon">
-                                    <i class="pe-5x pe-va pe-7s-diamond"></i>
-                                </div>
+                    <!--         <div class="price-table vip"> -->
+                    <!--             <div class="icon"> -->
+                    <!--                 <i class="pe-5x pe-va pe-7s-diamond"></i> -->
+                    <!--             </div> -->
 
-                                <div class="table-header">
-                                    <h3>Super Early Bird</h3>
-                                    <p class="price"> 1280€</p>
-                                </div>
+                    <!--             <div class="table-header"> -->
+                    <!--                 <h3>Super Early Bird</h3> -->
+                    <!--                 <p class="price"> 1280€</p> -->
+                    <!--             </div> -->
 
-                                <ul class="desc list-unstyled">
-                                    <li>Full Program 21 Days</li>
-                                    <li>30+ Acro Workshops</li>
-                                    <li>36+ Extra Classes</li>
-                                    <li>Accomodation</li>
-                                    <li>Constant Tranining Space</li>
-                                    <li>Access to some the Resort facilities</li>
-                                </ul>
-                            </div>
+                    <!--             <ul class="desc list-unstyled"> -->
+                    <!--                 <li>Full Program 21 Days</li> -->
+                    <!--                 <li>30+ Acro Workshops</li> -->
+                    <!--                 <li>36+ Extra Classes</li> -->
+                    <!--                 <li>Accomodation</li> -->
+                    <!--                 <li>Constant Tranining Space</li> -->
+                    <!--                 <li>Access to some the Resort facilities</li> -->
+                    <!--             </ul> -->
+                    <!--         </div> -->
 
-                        </div>
-                    </div>
+                    <!--     </div> -->
+                    <!-- </div> -->
                     <div class="col-lg-12">
                         <!-- PRICE TABLES -->
                         <div id="price-carousel-2">
