--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>{% load static %}
+<!DOCTYPE html>{% load static %}{% load analytical %}
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
+    {% analytical_head_top %}
 
         <title>DAP - Dynamic Acro Program</title>
 
@@ -50,9 +51,11 @@
         <link rel="shortcut icon" href="{% static "dap/img/favicon.ico" %}">
 
 
+    {% analytical_head_bottom %}
 	</head>
 
 	<body>
+        {% analytical_body_top %}
 
         <!-- PRELOADING -->
         <div id="preload">
@@ -1956,18 +1959,6 @@
 
 
 
-
-        <!-- <!-1- GOOGLE ANALYTICS -1-> -->
-        <!-- <script> -->
-		  <!-- (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ -->
-		  <!-- (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), -->
-		  <!-- m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) -->
-		  <!-- })(window,document,'script','http://www.google-analytics.com/analytics.js','ga'); -->
-
-		  <!-- ga('create', 'UA-XXXXXXX-XX', 'yourdomain.com'); -->
-		  <!-- ga('send', 'pageview'); -->
-
-		<!-- </script> -->
-
+   {% analytical_body_bottom %}
 	</body>
 </html>
