--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -80,7 +80,7 @@
 
             <div class="collapse navbar-collapse" id="nav">
               <ul class="nav navbar-nav navbar-right uppercase">
-                <li><a data-toggle="elementscroll" href="www.acrolama.com/events/dap">Register now</a></li>
+                <li><a data-toggle="elementscroll" href="https://www.acrolama.com/events/dap">Register now</a></li>
                 <li><a data-toggle="elementscroll" href="#info">About</a></li>
                 <li><a data-toggle="elementscroll" href="#teachers">Teachers</a></li>
                 <li><a data-toggle="elementscroll" href="#program">Program</a></li>
