Early Bird Change

--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -232,7 +232,7 @@
             	<div class="row">
 
                 	<div id="left" class="left col-lg-9 col-md-8 text-right">
-                    	<h2>Super Early Bird</h2>
+                    	<h2>Early Bird</h2>
                       <p>Don't miss this oportunity</p>
                     </div>
 
@@ -1413,7 +1413,7 @@
                     	<h2 class="uppercase text-center">register</h2>
                         <p class="lead text-center">
                         <!-- Super Early Bird: Until 18th of May</br> -->
-                                                                Early Bird: Until 28th June</br>
+                                                                Early Bird: Until 30th June</br>
                                                                 Regular Price: After 21th June</br>
                         </p>
                     </div>
