--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -537,7 +537,7 @@
                                             <div class="panel-body">
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-2 col-sm-2">
-                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker2.png" %}" alt="">
+                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker2.jpg" %}" alt="">
                                                     </div>
 
                                                     <div class="col-lg-10 col-md-10 col-sm-10">
@@ -832,7 +832,7 @@
                                             <div class="panel-body">
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-2 col-sm-2">
-                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker2.png" %}" alt="">
+                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker2.jpg" %}" alt="">
                                                     </div>
 
                                                     <div class="col-lg-10 col-md-10 col-sm-10">
@@ -1134,7 +1134,7 @@
                                             <div class="panel-body">
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-2 col-sm-2">
-                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker2.png" %}" alt="">
+                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker2.jpg" %}" alt="">
                                                     </div>
 
                                                     <div class="col-lg-10 col-md-10 col-sm-10">
