--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -719,7 +719,7 @@
                                             <div class="panel-body">
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-2 col-sm-2">
-                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker3.png" %}" alt="">
+                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker3.jpg" %}" alt="">
                                                     </div>
 
                                                     <div class="col-lg-7 col-md-7 col-sm-10">
@@ -1020,7 +1020,7 @@
                                             <div class="panel-body">
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-2 col-sm-2">
-                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker3.png" %}" alt="">
+                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker3.jpg" %}" alt="">
                                                     </div>
 
                                                     <div class="col-lg-7 col-md-7 col-sm-10">
@@ -1311,7 +1311,7 @@
                                             <div class="panel-body">
                                                 <div class="row">
                                                     <div class="col-lg-2 col-md-2 col-sm-2">
-                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker3.png" %}" alt="">
+                                                        <img class="img-responsive img-circle" src="{% static "dap/img/speaker3.jpg" %}" alt="">
                                                     </div>
 
                                                     <div class="col-lg-7 col-md-7 col-sm-10">
