--- a/acrofestival/templates/pages/dap/index.html
+++ b/acrofestival/templates/pages/dap/index.html
@@ -1413,7 +1413,6 @@
                     	<h2 class="uppercase text-center">register</h2>
                         <p class="lead text-center">
                         <!-- Super Early Bird: Until 18th of May</br> -->
-                                                                Early Bird: Until 30th June</br>
                                                                 Regular Price: After 21th June</br>
                         </p>
                     </div>
@@ -1484,72 +1483,72 @@
 
                     <!--     </div> -->
                     <!-- </div> -->
-                    <div class="col-lg-12">
-                        <!-- PRICE TABLES -->
-                        <div id="price-carousel-2">
+                    <!-- <div class="col-lg-12"> -->
+                    <!--     <!-1- PRICE TABLES -1-> -->
+                    <!--     <div id="price-carousel-2"> -->
 
-                            <div class="price-table early-bird">
-                                <div class="icon">
-                                    <i class="pe-5x pe-7s-wristwatch"></i>
-                                </div>
+                    <!--         <div class="price-table early-bird"> -->
+                    <!--             <div class="icon"> -->
+                    <!--                 <i class="pe-5x pe-7s-wristwatch"></i> -->
+                    <!--             </div> -->
 
-                                <div class="table-header">
-                                    <h3>Early Bird</h3>
-                                    <p class="price"> 550€</p>
-                                </div>
+                    <!--             <div class="table-header"> -->
+                    <!--                 <h3>Early Bird</h3> -->
+                    <!--                 <p class="price"> 550€</p> -->
+                    <!--             </div> -->
 
-                                <ul class="desc list-unstyled">
-                                    <li>1 Week of Full Program</li>
-                                    <li>10 Acro Workshops</li>
-                                    <li>13 Extra Classes</li>
-                                    <li>Accomodation</li>
-                                    <li>Tranining Space</li>
-                                    <li>Access to some the Resort facilities</li>
-                                </ul>
-                            </div>
+                    <!--             <ul class="desc list-unstyled"> -->
+                    <!--                 <li>1 Week of Full Program</li> -->
+                    <!--                 <li>10 Acro Workshops</li> -->
+                    <!--                 <li>13 Extra Classes</li> -->
+                    <!--                 <li>Accomodation</li> -->
+                    <!--                 <li>Tranining Space</li> -->
+                    <!--                 <li>Access to some the Resort facilities</li> -->
+                    <!--             </ul> -->
+                    <!--         </div> -->
 
-                            <div class="price-table standart">
-                                <div class="icon">
-                                    <i class="pe-5x pe-va pe-7s-ribbon"></i>
-                                </div>
+                    <!--         <div class="price-table standart"> -->
+                    <!--             <div class="icon"> -->
+                    <!--                 <i class="pe-5x pe-va pe-7s-ribbon"></i> -->
+                    <!--             </div> -->
 
-                                <div class="table-header">
-                                    <h3>Early Bird</h3>
-                                    <p class="price"> 980€</p>
-                                </div>
+                    <!--             <div class="table-header"> -->
+                    <!--                 <h3>Early Bird</h3> -->
+                    <!--                 <p class="price"> 980€</p> -->
+                    <!--             </div> -->
 
-                                <ul class="desc list-unstyled">
-                                    <li>2 Week of Full Program</li>
-                                    <li>20+ Acro Workshops</li>
-                                    <li>26+ Extra Classes</li>
-                                    <li>Accomodation</li>
-                                    <li>Tranining Space</li>
-                                    <li>Access to some the Resort facilities</li>
-                                </ul>
-                            </div>
+                    <!--             <ul class="desc list-unstyled"> -->
+                    <!--                 <li>2 Week of Full Program</li> -->
+                    <!--                 <li>20+ Acro Workshops</li> -->
+                    <!--                 <li>26+ Extra Classes</li> -->
+                    <!--                 <li>Accomodation</li> -->
+                    <!--                 <li>Tranining Space</li> -->
+                    <!--                 <li>Access to some the Resort facilities</li> -->
+                    <!--             </ul> -->
+                    <!--         </div> -->
 
-                            <div class="price-table vip">
-                                <div class="icon">
-                                    <i class="pe-5x pe-va pe-7s-diamond"></i>
-                                </div>
+                    <!--         <div class="price-table vip"> -->
+                    <!--             <div class="icon"> -->
+                    <!--                 <i class="pe-5x pe-va pe-7s-diamond"></i> -->
+                    <!--             </div> -->
 
-                                <div class="table-header">
-                                    <h3>Early Bird</h3>
-                                    <p class="price"> 1380€</p>
-                                </div>
+                    <!--             <div class="table-header"> -->
+                    <!--                 <h3>Early Bird</h3> -->
+                    <!--                 <p class="price"> 1380€</p> -->
+                    <!--             </div> -->
 
-                                <ul class="desc list-unstyled">
-                                    <li>Full Program 21 Days</li>
-                                    <li>30+ Acro Workshops</li>
-                                    <li>36+ Extra Classes</li>
-                                    <li>Accomodation</li>
-                                    <li>Constant Tranining Space</li>
-                                    <li>Access to some the Resort facilities</li>
-                                </ul>
-                            </div>
+                    <!--             <ul class="desc list-unstyled"> -->
+                    <!--                 <li>Full Program 21 Days</li> -->
+                    <!--                 <li>30+ Acro Workshops</li> -->
+                    <!--                 <li>36+ Extra Classes</li> -->
+                    <!--                 <li>Accomodation</li> -->
+                    <!--                 <li>Constant Tranining Space</li> -->
+                    <!--                 <li>Access to some the Resort facilities</li> -->
+                    <!--             </ul> -->
+                    <!--         </div> -->
 
-                        </div>
-                    </div>
+                    <!--     </div> -->
+                    <!-- </div> -->
 
                     <div class="col-lg-12">
                         <!-- PRICE TABLES -->
@@ -1561,7 +1560,7 @@
                                 </div>
 
                                 <div class="table-header">
-                                    <h3>Full Price</h3>
+                                    <h3>Regular Price</h3>
                                     <p class="price"> 600€</p>
                                 </div>
 
@@ -1581,7 +1580,7 @@
                                 </div>
 
                                 <div class="table-header">
-                                    <h3>Full Price</h3>
+                                    <h3>Regular Price</h3>
                                     <p class="price"> 1070€</p>
                                 </div>
 
@@ -1601,7 +1600,7 @@
                                 </div>
 
                                 <div class="table-header">
-                                    <h3>Full Price</h3>
+                                    <h3>Regular Price</h3>
                                     <p class="price"> 1480€</p>
                                 </div>
 
