Added Fadri and Marie

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -88,7 +88,7 @@
                                 acro workshops over this weekend festival.</p>
                             <p>Going full on training and playing is our bread and butter but there must be space for social,
                                 creative moments with a surprise here and there!</p>
-                            <p>We have this year only spots for 60 participants.</p>
+                            <p>We have this year only spots for 80 participants.</p>
                         </div>
                     </div>
 
@@ -103,7 +103,7 @@
                             <p>We have carefully chosen our teacher-team around the Switzerland and Europe Acro
                                 Community. We trust in them and love to offer you small, personalized
                                 workshops. Of conviction, we keep it small and familiarly.</p>
-                            <p>So all in all, we are looking forward to 6 Rounds with each 2 Workshops
+                            <p>So all in all, we are looking forward to 6 Rounds with each 3 Workshops
                                 to choose from.</p>
                             <p>We'll list the Workshops as soon as possible, to receive the last news
                                 join or Newsletter or our Whatsapp Group</p>
@@ -191,7 +191,7 @@
                     <div class="counter-block counter-block-no-border">
                         <div class="counter-box">
                             <div class="counter-content">
-                                <span class="count" data-from="0" data-to="12">0</span>
+                                <span class="count" data-from="0" data-to="20">0</span>
                                 <p class="title">workshops</p>
                             </div>
                         </div>
@@ -202,7 +202,7 @@
                     <div class="counter-block counter-block-no-border">
                         <div class="counter-box">
                             <div class="counter-content">
-                                <span class="count" data-from="0" data-to="6">0</span>
+                                <span class="count" data-from="0" data-to="12">0</span>
                                 <p class="title">teachers</p>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                     <div class="counter-block counter-block-no-border">
                         <div class="counter-box">
                             <div class="counter-content">
-                                <span class="count" data-from="0" data-to="60">0</span>
+                                <span class="count" data-from="0" data-to="80">0</span>
                                 <p class="title">participants</p>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                     <div class="counter-block counter-block-no-border">
                         <div class="counter-box">
                             <div class="counter-content">
-                                <span class="count" data-from="0" data-to="50">0</span>
+                                <span class="count" data-from="0" data-to="24">0</span>
                                 <p class="title">hours of jam</p>
                             </div>
                         </div>
@@ -273,6 +273,30 @@
                     <h3 class="name">Julita & Jannik</h3>
                     <p class="text-alt"><small>Direct import aus Hamburg</small></p>
                     <p class="about">The story with this two does back many many years, similar paths in a way, from full on acroyogis to more traditional acrobats and Circus lovers. Jannik co-founded <a href="https://www.instagram.com/feel_the_flow_hamburg/">@feel_the_flow_hamburg</a> and Julia went a bit more into the Show Biz ;-) Multi talented Acrobats with much to share. Glad to have you on board!</p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
+                    <h3 class="name">Fadri & Leona</h3>
+                    <p class="text-alt"><small>Creative Acro Flows</small></p>
+                    <p class="about">Fadri has been teaching in the Acrolama Team for over a year and has a long long history as a Acrobat. Not a coincidence that ones he meet Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon!
+                    </p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_marie_tomas.jpg' %}" alt="Marie and Tomas at the Urban Acro Festival Acroyoga FlowsSchweiz" class="img-responsive"></div>
+                    <h3 class="name">Tomas and Marie</h3>
+                    <p class="text-alt"><small>Acro Adventure</small></p>
+                    <p class="about">Tomas and Marie fell in love at New Years Acro, started a road trip, got married and teach together as team AcroAdventure. 
+It seems like there is an ongoing smiling competition between them two. They bring a wealth of AcroYoga flow experience and can’t wait to teach here in Zürich!
+<a href="www.acroadventure.com">www.acroadventure.com</a>
+                    </p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
