--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -282,7 +282,7 @@
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_fadri_leona.jpg' %}" alt="Fadri and Leona at the Urban Acro Festival Acrobatic Acroyoga and Standing Flows Schweiz" class="img-responsive"></div>
                     <h3 class="name">Fadri & Leona</h3>
                     <p class="text-alt"><small>Creative Acro Flows</small></p>
-                    <p class="about">Fadri has been teaching in the Acrolama Team for over a year and has a long long history as a Acrobat. Not a coincidence that ones he meet Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon!
+                    <p class="about">Fadri has been teaching in the Acrolama Team for over a year and has a long long history as a Acrobat. Not a coincidence that ones he met Leona, another long long Acro lover, super creative new flows where born. Super looking forward to see you soon!
                     </p>
                     <ul class="speaker-socials">
                     </ul>
